--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul><li><a href="recipes/neapolitan-pizza.html" target="_blank" rel="noopener noreferrer">
+    <ul class="list"><li><a href="recipes/neapolitan-pizza.html" target="_blank" rel="noopener noreferrer">
         Neapolitan Pizza
     </a></li>
     <li>
@@ -17,6 +18,7 @@
         <a href="recipes/pita.html" target="_blank">Pita</a>
 
     </li>
+    </ul>
 
 </body>
 </html>
